--- a/Dokumentation/Projektskizze/02_einleitung.tex
+++ b/Dokumentation/Projektskizze/02_einleitung.tex
@@ -2,17 +2,29 @@
 \chapter{Einleitung}
 \label{sec:einleitung}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+Das Internet und die Digitalisierung, die in alle Lebensbereiche Einzug erhält, verändern Gesellschaft, Wirtschaft und Kultur.
+Egal ob im privaten oder beruflichen Umfeld, ständig sind wir von Computern in Form von Arbeitsgeräten, Smartphones oder anderen Geräten umgeben.
+Diese Vernetzung wird in den nächsten Jahren im Zuge der "`Internet-der-Dinge-Evolution"' weiter drastisch zunehmen.\\
+
+
+
+Ein oft vernachlässigter Aspekt hierbei ist das Thema "`IT-Sicherheit"'. Keine Software ist frei von Fehlern und Sicherheitslücken. Es bedarf einen großen Aufwand, um eine Infrastruktur vor möglichen Angriffen zu schützen.
 
 
 \section{Motivation}
 \label{subsec:Motivation}
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+Durch unsere privaten wie auch beruflichen Tätigkeiten im Systemadministratorenumfeld werden auch wir mit dem Thema der Absicherung von Infrastrukturen konfrontiert.\\
+
+
+sind beide als Systemadministratoren tätig betreuen eigene Netzwerkumgebungen, wollen wissen über mögliche Angriffe sammeln, wollen kleines kostengünstiges, einfach zu kofigruerendes honeypot system haben, wollen erfahrungen sammeln, ...?
 
 
 \section{Ziele}
 \label{subsec:Ziele}
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+Ziel dieser Arbeit ist es, ein System zu entwickeln, dass als Honeypot dient. Dieser Honeypot soll eingesetzt werden, um Informationen über Angriffsmuster und Angreiferverhalten zu erhalten. Dazu stellt das System ein vermeintlich leicht angreifbares Ziel dar.\\
+
+Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokolliert und ausgewertet. 
+Mit Hilfe von diesem Wissen kann eine reale Netzwerkumgebung gegen Angriffe abgesichert werden.\\
 
 
 \section{Eigene Leistung}
