updated text, added gantt

--- a/Dokumentation/Projektskizze/00_Vorlage Abschlussarbeit.tex
+++ b/Dokumentation/Projektskizze/00_Vorlage Abschlussarbeit.tex
@@ -104,7 +104,7 @@
 
 \include{03_anforderungsanalyse}
 
-
+\include{04_gannt}
 
 %Literaturverzeichnis
 %\addcontentsline{toc}{chapter}{Literaturverzeichnis}
