--- a/Dokumentation/Projektskizze/02_einleitung.tex
+++ b/Dokumentation/Projektskizze/02_einleitung.tex
@@ -26,10 +26,21 @@ Ziel dieser Arbeit ist es, ein System zu entwickeln, dass als Honeypot dient. Di
 Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokolliert und ausgewertet. 
 Mit Hilfe von diesem Wissen kann eine reale Netzwerkumgebung gegen Angriffe abgesichert werden.\\
 
+\begin{itemize}
+\item Primärziel: einsatzfähige(r) Honeypot(s) - sicher, authentisch und lehrreich
+\item Sekundärziel: von Angreifern lernen
+\end{itemize}
 
 \section{Eigene Leistung}
 \label{subsec:Eigene Leistung}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.
+Die Bereitstellung einer für einen potentiellen Angreifer authentische Umgebung, sowie die Einbettung des Honeypots in selbige.
+
+\begin{itemize}
+\item Bereitstellung einer authentischen Umgebung für den Honeypot
+\item Gewährleistung der Sicherheit für das eigene und das globale Netz
+\item Inbetriebnahme des Honeypots
+\item Auswertung von Log-Files et cetera
+\end{itemize}
 
 
