--- a/Dokumentation/Projektskizze/00_Projektskizze.tex
+++ b/Dokumentation/Projektskizze/00_Projektskizze.tex
@@ -104,7 +104,7 @@
 
 \include{03_anforderungsanalyse}
 
-\include{04_gannt}
+\include{04_gantt}
 
 %Literaturverzeichnis
 %\addcontentsline{toc}{chapter}{Literaturverzeichnis}
