updated Einleitung, Anforderungen, Ziele + Gantt

--- a/Dokumentation/Projektskizze/01_titel.tex
+++ b/Dokumentation/Projektskizze/01_titel.tex
@@ -15,7 +15,7 @@
 
 \begin{center}
 \LARGE{\textsc{
-Dokumentation \\
+Projektskizze \\
 }}
 \end{center}
 
@@ -36,10 +36,11 @@ im Bachelor Studiengang Angewandte Informatik \\}
 
 \\
 
+%\begin{center}
+%\huge{\textbf{Umsetzung von einem Honeypot \\
+%auf Basis eines Raspberry Pi}} \\
 \begin{center}
-\huge{\textbf{Umsetzung von einem Honeypot \\
-auf Basis eines Raspberry Pi}} \\
-
+\huge{\textbf{Umsetzung von einem Honeypot}} \\
 \end{center}
 
 
@@ -64,7 +65,7 @@ auf Basis eines Raspberry Pi}} \\
 \\
 
 \begin{center}
-\large{12. Oktober 2016}
+\large{13. Oktober 2016}
 \end{center}
 
 
