--- a/Dokumentation/Projektskizze/02_einleitung.tex
+++ b/Dokumentation/Projektskizze/02_einleitung.tex
@@ -2,45 +2,51 @@
 \chapter{Einleitung}
 \label{sec:einleitung}
 
-Das Internet und die Digitalisierung, die in alle Lebensbereiche Einzug erhält, verändern Gesellschaft, Wirtschaft und Kultur.
-Egal ob im privaten oder beruflichen Umfeld, ständig sind wir von Computern in Form von Arbeitsgeräten, Smartphones oder anderen Geräten umgeben.
-Diese Vernetzung wird in den nächsten Jahren im Zuge der "`Internet-der-Dinge-Evolution"' weiter drastisch zunehmen.\\
+Das Internet und die Digitalisierung, die in alle Lebensbereiche Einzug hält, verändern Gesellschaft, Wirtschaft und Kultur. Egal ob im privaten oder beruflichen Umfeld, ständig sind wir von Computern in Form von Arbeitsgeräten, Smartphones oder anderen Geräten umgeben. Diese Verbreitung sowie die Vernetzung von Geräten untereinander wird in den nächsten Jahren im Zuge der "`Internet-der-Dinge-Evolution"' weiter drastisch zunehmen.\\
 
+Ein oft vernachlässigter Aspekt ist hierbei das Thema "`IT-Sicherheit"'. Keine Software ist frei von Fehlern und Sicherheitslücken. Falsch konfigurierte Dienste und Software, die nicht regelmäßig aktualisiert wird, sind ein leichtes Ziel für Angreifer. Durch die zunehmende Vernetzung wird das Thema IT-Sicherheit in Zukunft weiter an Bedeutung gewinnen.\\
 
-
-Ein oft vernachlässigter Aspekt hierbei ist das Thema "`IT-Sicherheit"'. Keine Software ist frei von Fehlern und Sicherheitslücken. Es bedarf einen großen Aufwand, um eine Infrastruktur vor möglichen Angriffen zu schützen.
+Um eine Infrastruktur, egal ob im privaten oder geschäftlichen Bereich, vor möglichen Angriffen zu schützen bedarf es einen immer größeren Aufwand.
 
 
 \section{Motivation}
 \label{subsec:Motivation}
-Durch unsere privaten wie auch beruflichen Tätigkeiten im Systemadministratorenumfeld werden auch wir mit dem Thema der Absicherung von Infrastrukturen konfrontiert.\\
+
+Durch unsere beruflichen wie auch privaten Tätigkeiten im Bereich der Systemadministration sehen auch wir uns mehr und mehr mit dem Thema "`IT-Sicherheit"', insbesondere im Bereich der Absicherung von Infrastrukturen, konfrontiert.\\
+
+Die Gewährleistung dieser Sicherheit ist mittlerweile eine immens wichtige, wenn nicht sogar die wichtigste Anforderung an eine intakte IT-Infrastruktur. Jegliche Bemühungen dieser Anforderung gerecht zu werden sind Teil des täglichen Brots eines Systemadministrators.\\
+
+Das Konzept eines Honeypots, also einen potentiellen Angreifer nicht nur vor eigentlich wichtigen System fernzuhalten, sondern auch noch von seinem Wissen zu profitieren, stellt dabei einen hochspannenden Ansatz dar. Unsere Hoffnung ist es, dass dieser Ansatz dazu in der Lage ist, uns dabei zu helfen, die Sicherheit unserer Systeme hochzuhalten und uns unser tägliches Brot etwas zu "`versüßen"'.
 
 
-sind beide als Systemadministratoren tätig betreuen eigene Netzwerkumgebungen, wollen wissen über mögliche Angriffe sammeln, wollen kleines kostengünstiges, einfach zu kofigruerendes honeypot system haben, wollen erfahrungen sammeln, ...?
+\newpage
 
 
 \section{Ziele}
 \label{subsec:Ziele}
-Ziel dieser Arbeit ist es, ein System zu entwickeln, dass als Honeypot dient. Dieser Honeypot soll eingesetzt werden, um Informationen über Angriffsmuster und Angreiferverhalten zu erhalten. Dazu stellt das System ein vermeintlich leicht angreifbares Ziel dar.\\
 
-Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokolliert und ausgewertet. 
-Mit Hilfe von diesem Wissen kann eine reale Netzwerkumgebung gegen Angriffe abgesichert werden.\\
+Ziel dieser Arbeit ist es, ein System zu entwickeln, das als Honeypot dient. Dieser Honeypot soll eingesetzt werden, um Einblicke in die Vorgehensweise eines Angreifers zu bekommen. Das System stellt dazu ein vermeintlich leicht angreifbares Ziel dar.\\
+
+Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokolliert und ausgewertet. Das hierbei gewonnene Wissen soll in Form von IT-Sicherheitsmaßnahmen in bestehende und künftige IT-Infrastrukturen einfließen.\\
 
 \begin{itemize}
 \item Primärziel: einsatzfähige(r) Honeypot(s) - sicher, authentisch und lehrreich
 \item Sekundärziel: von Angreifern lernen
 \end{itemize}
 
+
+
+
 \section{Eigene Leistung}
 \label{subsec:Eigene Leistung}
 
-Die Bereitstellung einer für einen potentiellen Angreifer authentische Umgebung, sowie die Einbettung des Honeypots in selbige.
+Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstellung eines Honeypots, sowie die Integration desselben in eine für einen potentiellen Angreifer authentisch erscheinenden Umgebung. Dabei liegt das Hauptaugenmerk auf der Gewährleistung von absoluter Sicherheit sowohl für das eigene als auch für das globale Netz. Selbstverständlich werden aber auch Auswertung und Dokumentation stattgefundener Angriffe nicht zu kurz kommen.
 
 \begin{itemize}
 \item Bereitstellung einer authentischen Umgebung für den Honeypot
 \item Gewährleistung der Sicherheit für das eigene und das globale Netz
-\item Inbetriebnahme des Honeypots
+\item Inbetriebnahme des Honeypots selbst
 \item Auswertung von Log-Files et cetera
+\item Dokumentation von Honeypot inkl. Umgebung, Angriffsphase und Ergebnisse
 \end{itemize}
-
 
