--- a/Dokumentation/Pflichtenheft/03_anforderungsanalyse.tex
+++ b/Dokumentation/Pflichtenheft/03_anforderungsanalyse.tex
@@ -1,11 +1,11 @@
 \chapter{Anforderungen}
-\label{sec:Anforderungen}
+\label{ch:Anforderungen}
 
 Die Anforderungen an das Honeypot-System werden in Muss-, Kann- und Soll-Kriterien unterteilt.
 
 
 \section{Muss-Kriterien}
-\label{subsec:Muss-Kriterien}
+\label{sec:Muss-Kriterien}
 \begin{itemize}
 \item Honeypot ist über das Internet erreichbar
 \item Honeypot darf keinerlei Gefahr für andere Systeme darstellen
@@ -23,7 +23,7 @@ Die Anforderungen an das Honeypot-System werden in Muss-, Kann- und Soll-Kriteri
 \newpage
 
 \section{Soll-Kriterien}
-\label{subsec:Soll-Kriterien}
+\label{sec:Soll-Kriterien}
 \begin{itemize}
 \item automatische Benachrichtigung, wenn System angegriffen wird
 \item Protokollierung und ggf. Forwarding von Log-Files dürfen für den Angreifer nicht sichtbar sein
@@ -33,7 +33,7 @@ Die Anforderungen an das Honeypot-System werden in Muss-, Kann- und Soll-Kriteri
 
 
 \section{Kann-Kriterien}
-\label{subsec:Kann-Kriterien}
+\label{sec:Kann-Kriterien}
 \begin{itemize}
 \item geringer Stromverbrauch von Honeypot-System
 \item kostengünstiger Versuchsaufbau
