--- a/Dokumentation/Pflichtenheft/04_gantt.tex
+++ b/Dokumentation/Pflichtenheft/04_gantt.tex
@@ -1,5 +1,5 @@
 \chapter{Gantt-Diagramm}
-\label{sec:Gantt-Diagramm}
+\label{ch:Gantt-Diagramm}
 
 \begin{center}
 \includegraphics[scale=0.83]{img/gantt_tasks.png}
