--- a/Dokumentation/Pflichtenheft/02_einleitung.tex
+++ b/Dokumentation/Pflichtenheft/02_einleitung.tex
@@ -1,6 +1,6 @@
 \pagenumbering{arabic}
 \chapter{Einleitung}
-\label{sec:einleitung}
+\label{ch:einleitung}
 
 Das Internet und die Digitalisierung, die in alle Lebensbereiche Einzug hält, verändern Gesellschaft, Wirtschaft und Kultur. Egal ob im privaten oder beruflichen Umfeld, ständig sind wir von Computern in Form von Arbeitsgeräten, Smartphones oder anderen Geräten umgeben. Diese Verbreitung sowie die Vernetzung von Geräten untereinander wird in den nächsten Jahren im Zuge der "`Internet-der-Dinge-Evolution"' weiter drastisch zunehmen.\\
 
@@ -12,21 +12,23 @@ Um eine Infrastruktur, egal ob im privaten oder geschäftlichen Bereich, vor mö
 
 
 \section{Motivation}
-\label{subsec:Motivation}
+\label{sec:Motivation}
 
-Durch berufliche und private Tätigkeiten im Bereich Systemadministration ist die Forderung nach Sicherheit stets präsent.\\
+Die Gewährleistung der IT-Sicherheit ist mittlerweile eine immens wichtige, wenn nicht sogar die wichtigste Anforderung an eine intakte IT-Infrastruktur. Entsprechend sollte ein Systemadministrator über ein breites Spektrum an Wissen im Bereich der IT-Sicherheit besitzen sowie in der Lage sein, mögliche Angriffsszenarien frühzeitig zu erkennen.\\
 
-Die Gewährleistung dieser Sicherheit ist mittlerweile eine immens wichtige, wenn nicht sogar die wichtigste Anforderung an eine intakte IT-Infrastruktur. Entsprechend sollte ein Systemadministrator sein möglichstes Geben, dieser Anforderung gerecht zu werden.\\
 
-Das Konzept eines Honeypots, also einen potentiellen Angreifer nicht nur vor eigentlich wichtigen System fernzuhalten, sondern auch noch von seinem Wissen zu profitieren, stellt dabei einen hochspannenden Ansatz dar. Unsere Hoffnung ist es, dass dieser Ansatz dazu in der Lage ist, uns dabei zu helfen, die Sicherheit bestehender und künftiger Systeme hochzuhalten.
+Das Konzept eines Honeypots, also einen potentiellen Angreifer nicht nur vor eigentlich wichtigen System fernzuhalten, sondern auch noch von seinem Wissen zu profitieren, stellt dabei einen hochspannenden Ansatz dar. 
+Dieser Ansatz soll dem Projektteam helfen, Wissen über mögliche Angriffsszenarien und Vorgehensweisen zu erlangen, um so die Sicherheit von bestehenden und zukünftigen Infrastrukturen gewährleisten zu können.
 
 \newpage
 
 
 \section{Ziele}
-\label{subsec:Ziele}
+\label{sec:Ziele}
 
-Ziel dieser Arbeit ist es, ein System zu entwickeln, das als Honeypot dient. Dieser Honeypot soll eingesetzt werden, um Einblicke in die Vorgehensweise eines Angreifers zu bekommen. Das System stellt dazu ein vermeintlich leicht angreifbares Ziel dar.\\
+Ziel dieser Arbeit ist es, ein System zu entwickeln, das als Honeypot dient. Dieser Honeypot soll eingesetzt werden, um Einblicke in die Vorgehensweise eines Angreifers zu bekommen. 
+Das System stellt dazu ein vermeintlich leicht angreifbaren Webserver sowie SSH-Server dar.\\
+
 
 Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokolliert und ausgewertet. Das hierbei gewonnene Wissen soll in Form von IT-Sicherheitsmaßnahmen in bestehende und künftige IT-Infrastrukturen einfließen.
 
@@ -38,15 +40,15 @@ Jegliche Zugriffe und Aktivitäten die ein Angriff hinterlässt werden protokoll
 
 
 \section{Eigene Leistung}
-\label{subsec:Eigene Leistung}
+\label{sec:Eigene Leistung}
 
-Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstellung eines Honeypots, sowie die Integration desselben in eine für einen potentiellen Angreifer authentisch erscheinenden Umgebung. Dabei liegt das Hauptaugenmerk darauf, die Sicherheit des Systems zu gewährleisten. Aber auch Auswertung und Dokumentation stattgefundener Angriffe werden nicht zu kurz kommen.
+Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstellung eines Honeypots, sowie die Integration desselben in eine für einen potentiellen Angreifer authentisch erscheinenden Umgebung. Dabei liegt das Hauptaugenmerk darauf, die Sicherheit des Systems zu gewährleisten. Die Dokumentation der Infrastruktur, der stattgefundener Angriffe sowie deren Auswertung stellen einen wichtigen Bestandteil dar. Dieses Wissen dient dem Projektteam zukünftig zur Absicherung von IT-Infrastruktur.
 
 \begin{itemize}
 \item Bereitstellung einer authentischen Umgebung für den Honeypot
 \item Gewährleistung der Sicherheit für das eigene und das globale Netz
 \item Inbetriebnahme des Honeypots selbst
 \item Auswertung von Log-Files et cetera
-\item Dokumentation von Honeypot inkl. Umgebung, Angriffsphase und Ergebnisse
+\item Dokumentation von Honeypot inklusive Umgebung, Angriffsphase und Ergebnisse
 \end{itemize}
 
