--- a/Dokumentation/Pflichtenheft/00_Dokumentation.tex
+++ b/Dokumentation/Pflichtenheft/00_Dokumentation.tex
@@ -104,16 +104,16 @@
 
 \include{03_anforderungsanalyse}
 
-\include{04_gantt}
+\include{04_marktanalyse}
 
-\include{05_marktanalyse}
+\include{05_loesungsansaetze}
 
 %Literaturverzeichnis
-%\addcontentsline{toc}{chapter}{Literaturverzeichnis}
-%\bibliographystyle{unsrtdin}
-%\bibliography{Literatur}
+\addcontentsline{toc}{chapter}{Literaturverzeichnis}
+\bibliographystyle{unsrtdin}
+\bibliography{Literatur}
 
-%\include{09_anhang}
+\include{06_anhang}
 
 %\include{10_selbst}
 
