--- a/Dokumentation/Pflichtenheft/01_titel.tex
+++ b/Dokumentation/Pflichtenheft/01_titel.tex
@@ -31,7 +31,7 @@ im Bachelor Studiengang Angewandte Informatik \\}
 
 \begin{center}
 \large{Wintersemester 2016 / 2017 \\
- bei Herr Prof. Dr. Eggendorfer\\}
+ bei Herrn Prof. Dr. rer. nat. Eggendorfer\\}
 \end{center}
 
 \\
