--- a/Dokumentation/Pflichtenheft/02_einleitung.tex
+++ b/Dokumentation/Pflichtenheft/02_einleitung.tex
@@ -48,7 +48,8 @@ Der Hauptbestandteil dieses Projekts liegt in der Inbetriebnahme und Bereitstell
 \item Bereitstellung einer authentischen Umgebung für den Honeypot
 \item Gewährleistung der Sicherheit für das eigene und das globale Netz
 \item Inbetriebnahme des Honeypots selbst
-\item Auswertung von Log-Files et cetera
+\item automatisierte Auswertung von Log-Files durch Skripte
+\item aus Auswertung erfolgt Erarbeitung und Ausweitung von Sicherheitsrichtlinien (Passwortrichtlinien, Firewallregeln)
 \item Dokumentation von Honeypot inklusive Umgebung, Angriffsphase und Ergebnisse
 \end{itemize}
 
