--- a/Dokumentation/Pflichtenheft/06_anhang.tex
+++ b/Dokumentation/Pflichtenheft/06_anhang.tex
@@ -1,5 +1,11 @@
-\chapter{Gantt-Diagramm}
-\label{ch:Gantt-Diagramm}
+\appendix
+
+\chapter{Anhang}
+\label{ch:Anhang}
+
+\section*{Gantt-Diagramm}
+\label{app:Gantt-Diagramm}
+
 
 \begin{center}
 \includegraphics[scale=0.83]{img/gantt_tasks.png}
