--- a/Dokumentation/Pflichtenheft/03_anforderungsanalyse.tex
+++ b/Dokumentation/Pflichtenheft/03_anforderungsanalyse.tex
@@ -15,8 +15,8 @@ Die Anforderungen an das Honeypot-System werden in Muss-, Kann- und Soll-Kriteri
 \item Honeypot muss mindestens einen, besser jedoch mehrere Dienste, wie beispielsweise HTTP, SSH oder FTP, simulieren/anbieten
 \item Honeypot muss ein realistisch wirkendes Angriffsziel darstellen
 \item Angriffe werden geloggt
-\item ein- und ausgehender Netzwerkverkehr muss (überwacht und) geloggt werden 
-\item protokollierte Daten dürfen durch Angreifer nicht verändert werden können
+\item Ein- und ausgehender Netzwerkverkehr muss (überwacht und) geloggt werden 
+\item Protokollierte Daten dürfen durch Angreifer nicht verändert werden können
 
 \end{itemize}
 
@@ -25,9 +25,9 @@ Die Anforderungen an das Honeypot-System werden in Muss-, Kann- und Soll-Kriteri
 \section{Soll-Kriterien}
 \label{sec:Soll-Kriterien}
 \begin{itemize}
-\item automatische Benachrichtigung, wenn System angegriffen wird
+\item Automatische Benachrichtigung, wenn System angegriffen wird
 \item Protokollierung und ggf. Forwarding von Log-Files dürfen für den Angreifer nicht sichtbar sein
-\item automatisierte Auswertung von Logdaten
+\item Automatisierte Auswertung von Logdaten
 \item Logdateien / ausgewertete Daten werden automatisch separat gespeichert (extra System, Cloud-Speicher)
 \end{itemize}
 
@@ -35,8 +35,8 @@ Die Anforderungen an das Honeypot-System werden in Muss-, Kann- und Soll-Kriteri
 \section{Kann-Kriterien}
 \label{sec:Kann-Kriterien}
 \begin{itemize}
-\item geringer Stromverbrauch von Honeypot-System
-\item kostengünstiger Versuchsaufbau
+\item Geringer Stromverbrauch von Honeypot-System
+\item Kostengünstiger Versuchsaufbau
 \item Reverse DNS-Lookup von Angreifer-IP-Adresse(n)
 \item Simulation weiterer Geräte (Router, Firewall, PC)
 \item Honeypot simuliert offenes WLAN-Netz / Fake-Access-Point
