Changed title of the paper.

--- a/Dokumentation/Pflichtenheft/01_titel.tex
+++ b/Dokumentation/Pflichtenheft/01_titel.tex
@@ -40,7 +40,7 @@ im Bachelor Studiengang Angewandte Informatik \\}
 %\huge{\textbf{Umsetzung von einem Honeypot \\
 %auf Basis eines Raspberry Pi}} \\
 \begin{center}
-\huge{\textbf{Umsetzung von einem Honeypot}} \\
+\huge{\textbf{Umsetzung eines Honeypots}} \\
 \end{center}
 
 
