--- a/Dokumentation/Dokumentation/Literatur.bib
+++ b/Dokumentation/Dokumentation/Literatur.bib
@@ -32,4 +32,24 @@
   note         = {abgerufen: 10.11.2016},
 }
 
+@Misc{WikiHoney16,
+  author       = {Wikipedia},
+  title        = {Honeypot},
+  howpublished = {\url{https://de.wikipedia.org/wiki/Honeypot}},
+  year         = {2016},
+  note         = {abgerufen: 14.11.2016},
+}
+
+@Article{NawrockiWSKS16,
+  author    = {Marcin Nawrocki and Matthias W{\"{a}}hlisch and Thomas C. Schmidt and Christian Keil and Jochen Sch{\"{o}}nfelder},
+  title     = {A Survey on Honeypot Software and Data Analysis},
+  journal   = {CoRR},
+  year      = {2016},
+  volume    = {abs/1608.06249},
+  bibsource = {dblp computer science bibliography, http://dblp.org},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/NawrockiWSKS16},
+  timestamp = {Fri, 02 Sep 2016 17:46:24 +0200},
+  url       = {http://arxiv.org/abs/1608.06249},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
